# capstone

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  hardhat.config.js  package-lock.json  package.json  pyproject.toml  tested.meta.json  watermark.spec
.github/workflows/: ci.yml  docker.yml
api/: __init__.py  config.py  database.py  datetime_utils.py  deps.py  errors.py  main.py  models.py  schemas.py  security.py  watermark_service.py
api/routers/: auth.py  marketplace.py  nfts.py  users.py
backend/: README.md  pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/api/: deps.py
backend/app/api/routes/: jobs.py
backend/app/core/: config.py  logging.py
backend/app/security/: authorization.py
backend/tests/: test_health.py
cli/: __init__.py  __main__.py  main.py
contracts/: DataAsset.abi.json  DataAsset.sol
core/: __init__.py  csv_safety.py  env_bootstrap.py  hash_utils.py  onchain.py  watermark.py
data/: b2mark.sqlite  mintmark.sqlite
docs/: week5_user_guide.txt  week6_scenarios.txt  week7_contract_design.txt  week8_user_guide.txt
docs/api/: openapi.yaml
docs/security/: DB권한모델설계.md  acceptance-criteria-v1.md  사용자인증설계.md  위험분석.md  파일업로드정책.md
docs/threat-model/: 1주차_위험분석시나리오.md
docs/작업내역/: 1주차.md  2주차.md
guides/: MetaMask_로그인_가이드.md  RDS_연결_가이드.md
scripts/: build_exe.py  deploy_DataAsset.js
test-solidity/: DataAsset.test.js
tests/: conftest.py  test_api.py  test_b2mark_stats.py  test_cli.py  test_csv_safety.py  test_mintmark_stats.py  test_onchain.py  test_robustness.py  test_watermark.py
webtest/: app.js  index.html
