#======================================================================
[project]
# 작성자:     2376292 최승
# 최종 수정:  2026.03.18
#======================================================================

# 프로젝트 이름, 설명, 버전 등에 대한 설명
name = "flowguard-backend"
version = "0.1.0"
description = "2025 EWHA WOMANS UNIV CAPSTONE PROJECT"

#----------------------------------------------------------------------

# 프로젝트 실행을 위한 필수 조건(파이썬 버전, 라이브러리 등)
requires-python = ">=3.11"
dependencies = [
  # 이하 두 개는 웹 API 서버 구축을 위한 라이브러리
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # 이하 두 개는 데이터 형식 검사 및 설정파일 관리를 위한 라이브러리
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]

#----------------------------------------------------------------------

# 프로젝트 실행을 위해 필수는 아니지만, 개발 중 사용되는 도구
[project.optional-dependencies]
dev = [
  # 이하 두 개는 코드 동작 테스트를 위한 도구
  "pytest>=8.0",
  "httpx>=0.27",
  # bandit는 소스코드 수준에서의 보안 분석을 위해 필요
  "bandit>=1.7",
]

#----------------------------------------------------------------------

# 위의 각 도구의 세부 동작 규칙 정의
[tool.pytest.ini_options]
testpaths = ["tests"] # 테스트는 tests 폴더에서만 수행

[tool.bandit]
exclude_dirs = ["tests"]  # 소스코드 보안 검사에서 test 폴더는 제외

#======================================================================